--- a/Profile Management (Recruiter)/src/main/resources/application.properties
+++ b/Profile Management (Recruiter)/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Profile
-spring.datasource.url=jdbc:mysql://localhost:3306/user
+spring.datasource.url=jdbc:mysql://localhost:3306/connected
 spring.datasource.username=root
 spring.datasource.password=Simba555$
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
